add utils provier select in docs-site and add date-fns-jalali utils provider

--- a/docs-site/src/components/Examples/hero.scss
+++ b/docs-site/src/components/Examples/hero.scss
@@ -5,7 +5,7 @@
   &__content {
     @extend %container-styling;
     text-align: center;
-    padding: 175px 0;
+    padding: 100px 0 175px 0;
   }
 
   &__title {
